# cli-logging-utils

./: .coveragerc  .gitignore  MANIFEST.in  Makefile  README.md  example.py  requirements.txt  setup.cfg
cli_logging_utils/: __init__.py  color.py  formatters.py  handlers.py
pretty_log/: __init__.py  context.py  decorator.py  formatters.py  handlers.py
tests/: __init__.py  test_context.py  test_decorator.py  test_formatter.py  test_handlers.py  test_setup.py
