[meta]
name = cli-logging-utils
version = attr: cli_logging_utils.__version__
description = Utilities for making pretty logging in CLI applications
long_description = file: README.md
author = Elliott Blocha
author_email = eblocha@protonmail.me

[options]
packages = 
  cli_logging_utils
install_requires = 
  pretty-traceback
include_package_data = true
