[meta]
name = pretty-log
version = attr: pretty_log.__version__
description = Utilities for making pretty logging in CLI applications
long_description = file: README.md
author = Elliott Blocha
author_email = eblocha@protonmail.me

[options]
packages = 
  pretty_log
install_requires = 
  pretty-traceback
include_package_data = true
